[package]
name = "anchor-escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

# idl-build feature is now required in your program's Cargo.toml definition in order 
# for the IDL generation to work. when you do anchor init, the anchor lang crate will be added
# any other that you use to generate type definitions for the IDL need to be specified in the list
# in this case, we will add acnchor-spl

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"]}
anchor-spl = "0.30.1"